# msu-atpase-storage

./: .example.env  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  settings.example.yaml
docker/: Dockerfile  run.sh
msu_atpase_storage/: __init__.py  config.py  error_handlers.py  gdrive_.py  gspreadsh.py  handles.py  id_gen.py  main.py  types_.py  views.py
tests/: test_gdrive.py  test_id.py
